--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=admin
 spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.hibernate.ddl-auto=none
+server.port=8181
