still doesnt work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,16 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jackson.serialization.fail-on-empty-beans=false
 
-spring.jpa.hibernate.ddl-auto=none
 server.port=8181
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+spring.jpa.hibernate.ddl-auto=update
