--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>LATEST</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
