--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,15 +9,12 @@ server.port=8181
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 
-#spring.mvc.view.prefix: /
-#spring.mvc.view.suffix: .jsp
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-#spring.messages.basename=validation
+spring.jpa.hibernate.ddl-auto=update
+
