implemented jwt tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,20 @@ server.port=8181
 
 # Hibernate
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.http.log-request-details=true
+
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
+spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.hibernate.ddl-auto=update
+# App Properties
+#app.jwtSecret= JWTSuperSecretKey
+#app.jwtExpirationInMs = 604800000
+
