--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "authentication": "0.0.4",
+    "bootstrap": "^4.4.1",
     "rxjs": "~6.4.0",
     "services": "0.0.3",
     "tslib": "^1.10.0",
